- Fixed specialisations not properly being added to dicepool when firing weapons.
- Fixed a regression in the behaviour of shapeshifters in karmagen not automatically selecting 'Human' if the 'None' metavariant is selected.
- Fixed a regression in the behaviour of mastery qualities incorrectly counting towards used spells and karma.

Build 210
Application Fixes:
- Fixed behaviour of the Weapon Accessory mount checks to properly work with accessories that can occupy multiple slots when one of those slots is occupied.
- Fixed a regression in the behaviour of weapon accessories to ensure they properly save and load their ammoreplace property. Existing accessories that should have this property will need to be re-added.Closes #3947
- Fixed a regression in the behaviour of the GetNode method for Characters that could cause them to fetch incorrect values from XML. Closes #3948
- Purchasing cyberware in career mode with the house rule to allow customisation of essence costs now works poperly. Closes #3941
- Cyberware that has a wireless pair bonus and the replace mode will now properly remove its base improvements.
- Metavariants now properly fetch their base metatype's movement speed(s) if not specified in data. Resolves an issue in which active skill checking would cause a crash when initialising, if the character was not capable of Flight.
- Added an attribute (useselected) to bonus nodes that allows preventing the improvements from providing text to the parent object. This allow for preventing Infected qualities from listing the attributes they selected.
- Fixed behaviour of the selectattributes bonus to properly concatenate the selected values. 
- Fixed implementation of the LimitSpellDescriptor improvement to properly function as a whitelist instead of blacklist.
- Added support for Geneware actually benefiting from the genetechessmultiplier improvement.  Closes #3741