@@ -4465,19 +4465,6 @@
       <page>105</page>
     </quality>
     <quality>
-      <id>244dea68-fe8b-4532-954a-4ff2f78952f8</id>
-      <name>Magic Sense</name>
-      <karma>7</karma>
-      <category>Positive</category>
-      <required>
-        <allof>
-          <metatype>Centaur</metatype>
-        </allof>
-      </required>
-      <source>SG</source>
-      <page>172</page>
-    </quality>
-    <quality>
       <id>efc80d70-30ec-4460-bddb-f6006333dd3b</id>
       <name>Natural Weapon: Bite (Naga)</name>
       <karma>0</karma>
@@ -5560,13 +5547,14 @@
     </quality>
     <quality>
       <id>912bef16-2f72-45e2-95bb-96ef7eea4811</id>
-      <name>Magic Sense (Changeling)</name>
+      <name>Magic Sense</name>
       <karma>7</karma>
       <category>Positive</category>
       <metagenic>True</metagenic>
       <bonus />
       <required>
         <oneof>
+          <metatype>Centaur</metatype>
           <quality>Changeling (Class I SURGE)</quality>
           <quality>Changeling (Class II SURGE)</quality>
           <quality>Changeling (Class III SURGE)</quality>
