@@ -29559,8 +29559,8 @@
 			</quality>
 			<quality>
 				<id>912bef16-2f72-45e2-95bb-96ef7eea4811</id>
-				<name>Magic Sense (Changeling)</name>
-				<translate>Magicoperception (Changelin)</translate>
+				<name>Magic Sense</name>
+				<translate>Magicoperception</translate>
 				<altpage>116</altpage>
 				<altnameonpage></altnameonpage>
 			</quality>
