@@ -28985,8 +28985,8 @@
 			</quality>
 			<quality>
 				<id>912bef16-2f72-45e2-95bb-96ef7eea4811</id>
-				<name>Magic Sense (Changeling)</name>
-				<translate>Magic Sense (Changeling)</translate>
+				<name>Magic Sense</name>
+				<translate>Magic Sense</translate>
 				<altpage>116</altpage>
 			</quality>
 			<quality>
