@@ -5,6 +5,9 @@ Application Fixes:
 - Fixed a regression in the behaviour of shapeshifters in karmagen not automatically selecting 'Human' if the 'None' metavariant is selected.
 - Fixed a regression in the behaviour of mastery qualities incorrectly counting towards used spells and karma.
 
+Data Changes:
+- Removed extraneous Magic Sense quality. Closes #4021
+
 Build 210
 Application Fixes:
 - Fixed behaviour of the Weapon Accessory mount checks to properly work with accessories that can occupy multiple slots when one of those slots is occupied.
